--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			data: [28, 48, 40, 19, 86, 27, 90]
 		}
 	]
-}` options:`{}` width:600 height:250 /]</code></pre></div></div></div></div>
+}` options:`{}` width:600 height:250 /]</code></pre><p>See the <a href="https://github.com/mathisonian/idyll-chartjs-example">source for this page</a>.</p></div></div></div></div>
     <script src="index.js"></script>
   </body>
 </html>
